  Entities.Validator no longer validates read-only values
  DefaultDenormalizedViewProperty bug fixed, is now read-only, along with MirrorProperty
  EntityTableCellRenderers refactored
  DefaultDatabaseConnection constructor overloaded with validityCheckTimeout parameter, added to factory classes as well
  Configuration.CONNECTION_VALIDITY_CHECK_TIMEOUT added, default 0 seconds (no timeout)
  DatabaseUtil.validateWithQuery() now guards against databases that have not implemented setQueryTimeout()
  DefaultDatabaseConnection constructor throws exception if the connection parameter is closed
  Configuration.USE_OPTIMISTIC_LOCKING default value changed to true
  DefaultEntityConnection.lockAndCheckForUpdate() bug fixed, now excludes Types.BLOB properties from the modified check
  ColumnSearchPanel.initializeSearchTypeComboBox() bug fixed, SearchType was read-only due to incorrect type parameter in a call to ValueLinks.selectedItemValueLink()
  ItemComboBoxModel, some refactoring
0.8.7
  EntityTableCellRenderer.BooleanRenderer bug fixed (from last refactoring), BooleanRenderer is now aligned in center
  EntityTableSearchModel.addSearchStateListener(), removeSearchStateListener() and isSearchEnabled() added
  DefaultEntityTableModel.getOrderByClause() added
  Sonar run
  Entity, redundant getFormattedValue() removed
  EntityImpl, bug fixed, setValue() set the primary key to null to early, before validation had been performed
  Configuration.SERVER_MONITOR_UPDATE_RATE added
  EntityApplicationPanel.getFrameTitle() signature change, now takes a EntityConnectionProvider parameter instead of User
  EntityTablePanel.getRefreshControl() and getClearControl() made public
0.8.8 [incompatible api: Property]
  Property.PrimaryKeyProperty removed
  Property.ColumnProperty, get/setPrimaryKeyIndex() and isPrimaryKeyProperty() added
0.8.9
  EntityCriteriaUtil, possible heap pollution due to generic vararg parameters fixed